--- a/libraries/Project/library.properties
+++ b/libraries/Project/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=hceng 
 maintainer=thisway_diy <weidongshan@qq.com>
 sentence=OLED shows cpu, ram, temperature information. 
-paragraph=OLED shows cpu, ram, temperature information for 100ask_am335x board. 
+paragraph=OLED shows cpu, ram, temperature information for firefly-rk3288 board. 
 category=Sensors
 url=http://wiki.100ask.org/Mainpage
 architectures=*
